[package]
name = "wled_backup"
version = "1.0.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
mdns-sd = "0.13.9"
reqwest = { version = "0.12.20", features = ["blocking"] }
tokio = "1.45.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20.0"
tiny_http = "0.12.0"
